# ruled-router.rs

./: .gitignore  Cargo.toml  DESIGN.md  README.md  ROUTER_MATCH_DESIGN.md
.github/workflows/: publish.yaml  test.yaml
examples/: debug_format_example.rs
ruled-router/: Cargo.toml
ruled-router-derive/: Cargo.toml  README.md
ruled-router-derive/src/: lib.rs  query.rs  querystring.rs  route.rs  router_match.rs
ruled-router/examples/: advanced_query_usage.rs  advanced_usage.rs  api_comparison.rs  auto_prefix_extraction.rs  basic_usage.rs  complete_demo.rs  derive_usage.rs  format_sub_router_demo.rs  modular_routes.rs  nested_router_usage.rs  nested_routing.rs  new_query_design.rs  no_query_test.rs  performance_demo.rs  query_field_usage.rs  query_params.rs  query_usage.rs  simple_query_test.rs  simplified_nested_router.rs
ruled-router/src/: dom.rs  error.rs  formatter.rs  lib.rs  prelude.rs  traits.rs  utils.rs
ruled-router/src/parser/: mod.rs  path.rs  query.rs  types.rs
ruled-router/tests/: advanced_features_tests.rs  integration_tests.rs  performance_tests.rs  query_derive_tests.rs  router_derive_tests.rs  router_match_tests.rs
web-page-example/: Cargo.toml  README.md  build.sh  index.html
web-page-example/src/: lib.rs
