[package]
name = "web-page-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ruled-router = { path = "../ruled-router", features = ["dom"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "Location",
  "History",
  "Event",
  "EventTarget",
  "PopStateEvent",
  "MouseEvent",
  "HtmlButtonElement",
  "HtmlInputElement",
]
