[package]
name = "web-page-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ruled-router = { path = "../ruled-router", features = ["dom", "derive"] }
ruled-router-derive = { path = "../ruled-router-derive" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "Location",
  "History",
  "Event",
  "EventTarget",
  "PopStateEvent",
  "MouseEvent",
  "HtmlButtonElement",
  "HtmlInputElement",
]
